--- a/potfolio.html
+++ b/potfolio.html
@@ -23,7 +23,7 @@
               <a href="./index.html" class="navigation-link">Студія</a>
             </li>
             <li class="navigation-item">
-              <a href="./potfolio.html" class="navigation-link">Портфоліо</a>
+              <a href="./potfolio.html" class="navigation-link current">Портфоліо</a>
             </li>
             <li class="navigation-item">
               <a href="" class="navigation-link">Контакти</a>
@@ -204,7 +204,7 @@
          </div> 
       </div>
     </footer>
-            
+    
 
   </body>
 </html>
