--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="./index.html" class="navigation-logo-link"><span class="header-span">Web</span>Studio</a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a href="./index.html" class="navigation-link">Студія</a>
+              <a href="./index.html" class="navigation-link current ">Студія</a>
             </li>
             <li class="navigation-item">
               <a href="./potfolio.html" class="navigation-link">Портфоліо</a>
@@ -61,7 +61,7 @@
           <section class="services services-img">
             <div class="container">
               <h1 class="services-title">Ефективні рішення для вашого бізнесу</h1>
-              <button type="button" class="services-button">Замовити послугу</button>
+              <button class="services-button" data-modal-open type="button" >Замовити послугу</button>
             </div>
           </section>
         
@@ -130,13 +130,22 @@
             <ul class="features-list-second">
             <li class="features-item-second">
               <img src="./img/img.jpg" alt="займаємося" width="370" height="295">
+              <div class="features-text-container">
+                <p>Десктопні додатки</p>
+              </div>
             </li>
             <li class="features-item-second">
               <img
                 src="./img/img-1.jpg" alt="займаємося" width="370" height="295">
+                <div class="features-text-container">
+                  <p>Мобільні додатки</p>
+                </div>
             </li>
             <li class="features-item-second">
               <img src="./img/img-2.jpg" alt="займаємося" width="370" height="295">
+              <div class="features-text-container">
+                <p>Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
           </div> 
@@ -406,6 +415,19 @@
          </div> 
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="btn-modal-close" data-modal-close>
+          <svg class="btn-modal-close-icon" width="18" height="18">
+            <use href="./img/icons/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
+            
   </body>
 </html>
 
