--- a/index.html
+++ b/index.html
@@ -128,26 +128,31 @@
           <div class="container features-second-container ">
             <h2 class="second-title">Чим ми займаємося</h2>
             <ul class="features-list-second">
-            <li class="features-item-second">
-              <img src="./img/img.jpg" alt="займаємося" width="370" height="295">
-              <div class="features-text-container">
-                <p>Десктопні додатки</p>
-              </div>
-            </li>
-            <li class="features-item-second">
-              <img
-                src="./img/img-1.jpg" alt="займаємося" width="370" height="295">
-                <div class="features-text-container">
-                  <p>Мобільні додатки</p>
-                </div>
-            </li>
-            <li class="features-item-second">
-              <img src="./img/img-2.jpg" alt="займаємося" width="370" height="295">
-              <div class="features-text-container">
-                <p>Дизайнерські рішення</p>
-              </div>
-            </li>
-          </ul>
+              <li class="features-item-second">
+                <a href="#" class="features-link-wrapper">
+                  <div class="features-img-wrapper" >
+                    <img src="./img/img.jpg" alt="займаємося" width="370" height="295">
+                    <p class="features-overlay">Десктопні додатки</p>
+                  </div>
+                </a>
+              </li>
+              <li class="features-item-second">
+                <a href="#" class="features-link-wrapper">
+                  <div class="features-img-wrapper">
+                    <img src="./img/img-1.jpg" alt="займаємося" width="370" height="295">
+                    <p class="features-overlay">Мобільні додатки</p>
+                  </div>
+                </a>
+              </li>
+              <li class="features-item-second">
+                <a href="#" class="features-link-wrapper">
+                  <div class="features-img-wrapper">
+                    <img src="./img/img-2.jpg" alt="займаємося" width="370" height="295">
+                    <p class="features-overlay">Дизайнерські рішення</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
           </div> 
         </section>
         
