--- a/potfolio.html
+++ b/potfolio.html
@@ -79,67 +79,112 @@
 
         <ul class="portfolio-pictures-list">
           <li class="portfolio-background">
-            <img src="./portfolio-img/img.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-1.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-1.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-2.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text">Додаток</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-2.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-3.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Проєкт Prime</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-3.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Проєкт Prime</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-4.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Проєкт Boxes</h2>
-              <p class="portfolio-text">Додаток</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-4.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-5.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-5.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-6.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Видання Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-6.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-7.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Проєкт LAB</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-7.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Проєкт LAB</h2>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
           <li class="portfolio-background">
-            <img src="./portfolio-img/img-8.jpg" alt="зображення" width="370" height="295">
-            <div class="portfolio-title-text">
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-text">Додаток</p>
-            </div>
+            <a href="#" class="portfolio-list-link-wrapper link">
+              <div class="portfolio-list-img-wrapper">
+                <img src="./portfolio-img/img-8.jpg" alt="зображення" width="370" height="295">
+                <p class="portfolio-overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              <div class="portfolio-title-text">
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-text">Додаток</p>
+              </div>
+            </a>
           </li>
         </ul>
       
