--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
             <h2 class="second-title">Чим ми займаємося</h2>
             <ul class="features-list-second">
               <li class="features-item-second">
-                <a href="#" class="features-link-wrapper">
+                <!-- <a href="#" class="features-link-wrapper"> -->
                   <div class="features-img-wrapper" >
                     <img src="./img/img.jpg" alt="займаємося" width="370" height="295">
                     <p class="features-overlay">Десктопні додатки</p>
                   </div>
-                </a>
+                <!-- </a> -->
               </li>
               <li class="features-item-second">
-                <a href="#" class="features-link-wrapper">
+                <!-- <a href="#" class="features-link-wrapper"> -->
                   <div class="features-img-wrapper">
                     <img src="./img/img-1.jpg" alt="займаємося" width="370" height="295">
                     <p class="features-overlay">Мобільні додатки</p>
                   </div>
-                </a>
+                <!-- </a> -->
               </li>
               <li class="features-item-second">
-                <a href="#" class="features-link-wrapper">
+                <!-- <a href="#" class="features-link-wrapper"> -->
                   <div class="features-img-wrapper">
                     <img src="./img/img-2.jpg" alt="займаємося" width="370" height="295">
                     <p class="features-overlay">Дизайнерські рішення</p>
                   </div>
-                </a>
+                <!-- </a> -->
               </li>
             </ul>
           </div> 
